[gd_scene load_steps=12 format=2]

[ext_resource path="res://Models/WorkshopAnvil.obj" type="ArrayMesh" id=1]
[ext_resource path="res://Materials/WorkshopAnvilMat.tres" type="Material" id=2]
[ext_resource path="res://Fonts/Merienda-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Scripts/3DLabel.gd" type="Script" id=4]
[ext_resource path="res://Scripts/Interactable/Workstations/WorkshopAnvil.gd" type="Script" id=5]
[ext_resource path="res://Scenes/AnvilGrid.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/UI/SmithingUI.tscn" type="PackedScene" id=7]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 1.3, 0.95, 0.5 )

[sub_resource type="BoxShape" id=2]
extents = Vector3( 1.25, 0.95, 0.45 )

[sub_resource type="DynamicFont" id=3]
size = 32
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="ViewportTexture" id=4]
viewport_path = NodePath("Label3D/Viewport")

[node name="WorkshopAnvil" type="StaticBody"]
collision_layer = 4
collision_mask = 0
script = ExtResource( 5 )

[node name="SmithingUI" parent="." instance=ExtResource( 7 )]
visible = false

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 0.258819, 0.965926, 0, -0.965926, 0.258819, 0.25, 2.678, 0.313071 )

[node name="AnvilMesh" type="MeshInstance" parent="."]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -0.2, 0, 0 )
mesh = ExtResource( 1 )
material/0 = ExtResource( 2 )

[node name="InteractCollider" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.142, 0.95, 0.0436959 )
shape = SubResource( 1 )

[node name="PhysicalCollider" type="StaticBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
collision_layer = 2
collision_mask = 57

[node name="CollisionShape" type="CollisionShape" parent="PhysicalCollider"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.142, 0, 0.044 )
shape = SubResource( 2 )

[node name="Label3D" type="Spatial" parent="."]
visible = false

[node name="Viewport" type="Viewport" parent="Label3D"]
size = Vector2( 198, 47 )
transparent_bg = true
render_target_v_flip = true
script = ExtResource( 4 )

[node name="Label" type="Label" parent="Label3D/Viewport"]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 3 )
text = "Use Anvil [F]"
align = 1
valign = 1

[node name="Sprite3D" type="Sprite3D" parent="Label3D"]
transform = Transform( 0.557955, 0, 0, 0, 0.557955, 0, 0, 0, 1, 0, 2.55246, 0 )
billboard = 1
texture = SubResource( 4 )

[node name="AnvilGrid" parent="." instance=ExtResource( 6 )]
transform = Transform( -1.70474e-09, 0.039, -4.37114e-08, 0, -1.70474e-09, -1, -0.039, -1.70474e-09, 1.91069e-15, 0.25, 1.901, 0.05 )
visible = false

[node name="InternalInventory" type="Spatial" parent="."]

[node name="GridOrigin" type="Spatial" parent="InternalInventory"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.25, 1.96, 0.05 )

[node name="IngotOrigin" type="Spatial" parent="InternalInventory"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.3, 1.96, 0.05 )

[node name="PatternOrigin" type="Spatial" parent="InternalInventory"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.75, 1.96, 0.05 )

[node name="StrikeTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="StrikeCDTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[connection signal="timeout" from="StrikeTimer" to="." method="_on_strikeTimer_timeout"]
[connection signal="timeout" from="StrikeCDTimer" to="." method="_on_strikeCDTimer_timeout"]
